--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
-    "@mantine/hooks": "^5.0.3",
     "daisyui": "^2.22.0",
+    "framer-motion": "^7.0.0",
     "next": "12.2.4",
     "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-scroll": "^1.8.7"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
     "@types/react": "18.0.16",
     "@types/react-dom": "18.0.6",
+    "@types/react-scroll": "^1.8.4",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
